<?xml version="1.0" encoding="utf-8"?>
<resources >
    <string name="app_name">Have a Nice Price!</string>
    <string name="action_settings">Settings</string>
    <string name="filter_title_viewprice">http://novomic.co.nf/HaveANicePrice/</string>
    <string name="filter_title_viewprices">prices-app://prices/</string>

    <string name="start">Start service</string>
    <string name="stop">Stop service</string>
    <string name="main_menu_shops">Shops</string>
    <string name="main_menu_wish_list">Wish List</string>
    <string name="menu_statistics">Statistics</string>
    <string name="main_menu_about">About</string>
    <string name="main_menu_feedback">Feedback</string>
    <string name="about_title">ABOUT</string>
    <string name="about_text">
        Have a Nice Price App
        \nVersion 1.0
        \nDeveloped by:
        \nMikhail Novozhilov
        \nEmail:
        \nnovomic@gmail.com
    </string>
    <string name="content_authority">nf.co.novomic.haveaniceprice</string>
    <string name="sync_account_type">nf.co.novomic.haveaniceprice.sync</string>
    <string name="general_settings">Settings</string>
    <string name="sync_settings_summary">Automatic synchronization</string>
    <string name="sync">Synchronization</string>
    <string name="prices">Prices</string>
    <string name="auto_sync_summary">Periodical synchronization</string>
    <string name="auto_sync">Automatic synchronization</string>
    <string name="auto_sync_interval">Synchronization interval</string>
    <string name="settings">Settings</string>
    <string name="add">Add product</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="price">Price</string>
    <string name="std_price">StdPrice</string>
    <string name="discount">Discount</string>
    <string name="hint">Web address</string>
    <string name="shop_image">Shop Image</string>
    <string name="txtTitle">txtTitle</string>
    <string name="now">Now</string>
    <string name="std">Std</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
</resources>
