<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="nf.co.novomic.haveaniceprice.KEY_SYNC"
        android:title="@string/sync">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="nf.co.novomic.haveaniceprice.KEY_AUTO_SYNC"
            android:summary="@string/auto_sync_summary"
            android:title="@string/auto_sync" />

        <ListPreference
            android:defaultValue="@string/auto_sync_interval_default"
            android:dependency="nf.co.novomic.haveaniceprice.KEY_AUTO_SYNC"
            android:entries="@array/auto_sync_intervals"
            android:entryValues="@array/auto_sync_interval_values"
            android:key="nf.co.novomic.haveaniceprice.KEY_AUTO_SYNC_INTERVAL"
            android:title="@string/auto_sync_interval" />

    </PreferenceCategory>

</PreferenceScreen>
