<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:baselineAligned="false"
    android:divider="?android:attr/dividerHorizontal"
    android:orientation="vertical">

    <!-- separator -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <ImageView
            android:id="@+id/iv_product"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_shops"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/txtTitle"
                    android:id="@+id/txtTitle" />

                <!--<Button-->
                    <!--android:id="@+id/btn_main_shops"-->
                    <!--style="?android:attr/borderlessButtonStyle"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:gravity="center"-->
                    <!--android:text="@string/main_menu_shops" />-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/now"
                    android:id="@+id/txtPriceNowTitle" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/discount"
                    android:id="@+id/txtDiscountTitle" />

                <TextView
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/std"
                    android:id="@+id/txtPriceStdTitle" />

                <TextView
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/min"
                    android:id="@+id/txtPriceMinTitle" />

                <TextView
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/max"
                    android:id="@+id/txtPriceMaxTitle" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/now"
                    android:id="@+id/txtPriceNow" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/discount"
                    android:id="@+id/txtDiscount" />

                <TextView
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/std"
                    android:id="@+id/txtPriceStd" />

                <TextView
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/min"
                    android:id="@+id/txtPriceMin" />

                <TextView
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/max"
                    android:id="@+id/txtPriceMax" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- separator -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator" />


</LinearLayout>