<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- separator -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_main_shops"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_shops"
                tools:ignore="ContentDescription"
                android:layout_marginLeft="15dp" />

            <Button
                android:id="@+id/btn_main_java"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/main_menu_shops" />

        </RelativeLayout>

        <!-- separator -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

        <!-- Buttons with scaled images: -->
        <!-- RL was used to scale icons -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_main_wish_list"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_wish_list"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/btn_main_wish_list"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_menu_wish_list" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_main_statistics"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_statistics"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/btn_menu_statistics"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/menu_statistics" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_main_c_plus"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_about"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/btn_main_about"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_menu_about" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_main_c_sharp"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_feedback"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/btn_main_feedback"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_menu_feedback" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator" />

    </LinearLayout>

</ScrollView>
